# graph_make_prg

./: .gitignore  CMakeLists.txt  README.md
inc/: FA.hpp  MSA.hpp  coverage_graph.hpp  log.hpp  make_prg_string.hpp  msa_to_dfa.hpp  nested_prg.hpp  oneDepth_prg.hpp  sequence_graph.hpp  utils.hpp
pilot_src/: nested_prg_greedy.cpp  nested_prg_greedy.hpp  old_code.cpp
src/: FA.cpp  MSA.cpp  coverage_graph.cpp  log.cpp  main.cpp  make_prg_string.cpp  msa_to_dfa.cpp  nested_prg.cpp  oneDepth_prg.cpp  sequence_graph.cpp  test_run.cpp  utils.cpp
test_data/: AMA_Plasmodium.fasta  all_ends.fasta  bifurc.fasta  bifurc2.fasta  bifurc3.fasta  longer.fasta
tests/: CMakeLists.txt  common.cpp  common.hpp  main.cpp  prgs.cpp  test_large_prgs.cpp  test_make_prg_string.cpp  test_small_prgs.cpp
tests/test_data/: AMA_Plasmodium_2recs.fasta  adjacent_markers.fasta  nested.fasta  tmp.fasta
tests/test_data/debugs/: .swp  AMA_Plasmodium_cycle.fasta  retrieve.py  summary.tsv  x.dot  x.vg
tests/test_data/good_fmt/: no_heads.fasta  no_recs.fasta
